--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,11 @@
   "background": {
     "service_worker": "background.js"
   },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "host_permissions": [
     "https://www.instagram.com/*",
     "https://www.linkedin.com/*",
